# job_hunter

./: .env.postgres  .gitignore  AGENTS.md  README.md  app.py  docker-compose.yml  fetch_jobs.py  pyproject.toml  test_fetch_jobs.py
.agents/skills/: job_hunter
adapters_refactor/: asml.md  vanderlande.md
app/: __init__.py  job_hunter.py  job_hunter_core.py  rerank_jobs.py  run_fetch.py
app_job_hunter_ref/: job_hunter.py  rerank_jobs.py
candidate_profile/: profile.py  target_profile_schema.json
candidate_profile/llm/: candidate_profile_schema.json  candidate_profile_system_message.md  candidate_profile_user_message_template.md  profile.py
clients/: base.py  clients.py  clients_cli.py  job_downloader.py  registry.py
clients/candidate_profiling/: candidate_presenter.py  candidate_profile_llm_schema.py  candidate_profile_model.py  candidate_profile_schema.py  candidate_profile_user_message.md  candidate_profiling.py  candidate_profiling_cli.py  candidate_profiling_model.py  candidate_repo.py  candidate_route.py  candidate_service.py  candidate_types_mapper.py
clients/eligibility/: eligibility_cli.py  eligibilty.py  (+4 more)
core/: README.md  config.py  constants.py  errors.py  exception_handlers.py  logging.py
docs/: candidate_profile_user_message.md  clients_priority_analysis.md  common_extraction_rules.md  common_profile_system_message.md  job_cv_profiling_common.md  job_html_signal_cleaner_user_message.md  job_profile_model_design.md  job_profile_user_message.md
eligibility/: job_eligibility_profile_schema.json  job_eligibility_view.py  job_eligibility_view_cli.py
infra/: README.md  browser.py  db.py  format_conversion.py  json_io.py  logging.py
ranking/: evaluator.py  ranking_schema.json  service.py
reporting/: writer.py
scripts/: run_refactor_pipeline_parallel.py  seed_data.py  server_run.py  verify_postgres_crud.py
shared/: cli.py  db_repo.py  env.py  error_helpers.py  html.py  llm.py  map_postgres_integrity_error.py  normalizer.py  profiling.py  profiling_model.py  profiling_schema.py  types.py
sources/: base.py
storage/: __init__.py  postgres.py
tests/: conftest.py
ui/: app.py  candidate_profile_ui.py  settings.py
(+162 files in other folders)
