[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-searcher"
version = "0.1.0"
description = "Standalone job-hunter scraper for collecting and evaluating consultancy client vacancies."
requires-python = ">=3.8"
dependencies = [
    "openai==1.109.1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "playwright==1.48.0",
    "python-dotenv>=1.0,<2",
    "streamlit>=1.40,<2",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0,<3",
    "sqlmodel>=0.0.24,<0.1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-postgresql>=6.1,<7",
]

[project.scripts]
fetch-jobs = "fetch_jobs:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "clients_suite: runs the focused clients test suite",
    "openai_integration: exercises the live OpenAI-backed Sioux extractor",
]
